--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-pandas>=1.3.0
-numpy>=1.20.0
-scikit-learn>=1.0.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-jupyter>=1.0.0
-pytest>=6.2.0
-pyyaml>=6.0
-kagglehub
+kagglehub==0.3.10
+lightgbm==4.6.0
+matplotlib==3.5.3
+numpy==1.20.2
+numpy==1.21.5
+numpy==1.21.6
+pandas==1.3.5
+scikit_learn==1.0.2
+seaborn==0.13.2
+shap==0.42.1
+xgboost==1.6.2
