--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-kagglehub==0.3.10
+# Requires Python 3.7+
+kagglehub
 lightgbm==4.6.0
-matplotlib==3.5.3
-numpy==1.20.2
-numpy==1.21.5
-numpy==1.21.6
-pandas==1.3.5
-scikit_learn==1.0.2
-seaborn==0.13.2
-shap==0.42.1
-xgboost==1.6.2
+matplotlib
+numpy
+pandas
+scikit_learn
+seaborn
+shap
+xgboost
